# axp173-drive

./: CMakeLists.txt  LICENSE  README.md  library.json
cmake/: axp173_driver-config.cmake.in
docs/: axp-driver.md  i2c-manager.md  platformio-usage.md
examples/: CMakeLists.txt  axp173_example.cpp  basic_example.cpp  usage_examples.cpp
examples/platformio_example/: platformio.ini
examples/platformio_example/src/: main.cpp
include/axp173/: axp173.hpp  axp173_cm.h  axp173_reg.h  axp192.hpp  i2c_device_base.hpp
include/i2c_manager/: i2c_impl_esp32.h  i2c_impl_esp32_idf.h  i2c_impl_stm32.h  i2c_manager.hpp
